# straylight

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac
contrib/: .gitignore  00README  checkCompilationsOptions.sh  elements.pl  elementsDiff.py  img.py
contrib/oldMakefiles/: Makefile.benchmark  Makefile.normal
src/: Makefile.am  Makefile.in  config.h.in  configStraylight.h  cudaConvolution.cu  forward_model_single_psf_dual_resolution.cpp  forward_model_single_psf_dual_resolution.h  harvey_brdf.cpp  harvey_brdf.h  harvey_psf.cpp  harvey_psf.h  main.cpp  particulate_contamination_harvey_psf.cpp  particulate_contamination_harvey_psf.h  tis_surface_scattering_harvey.cpp  tis_surface_scattering_harvey.h  utilities.cpp  utilities.h
